--- a/style.css
+++ b/style.css
@@ -1,10 +1,282 @@
-.man-s-watch,
-.watch-shooting,
-.section-sale {
-  list-style-type: none;
+:root {
+  --footer-text-color: #fff;
+  --font-family: "Epilogue", sans-serif;
+  --trasform: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-@media screen and (min-width: 768px) {
-  .container-section {
+/*--syles canceling--*/
+h1,
+h2,
+h4,
+p {
+  margin: 0;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+}
+/*--MOBILE--*/
+
+.section-header {
+  color: #14141466;
+  background-color: var(--footer-header-background-color);
+  font-family: var(--font-family);
+  list-style-type: none;
+  color: var(--footer-text-color);
+}
+
+.footer-section {
+  padding: 40px 20px 40px 20px;
+}
+.first-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.footer-logo {
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+  svg {
+    width: 40px;
+    height: 40px;
+    fill: linear-gradient(rgba(0, 0, 0, 1), rgba(255, 255, 255, 1));
   }
+}
+.tel-class-footer {
+  padding-top: 40px;
+}
+.f-section-link {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+  text-align: left;
+  display: flex;
+  flex-direction: row;
+  width: max-content;
+  justify-content: end;
+  align-content: center;
+
+  li {
+    padding-bottom: 14px;
+  }
+  a {
+    text-decoration: none;
+    text-transform: uppercase;
+    color: var(--footer-text-color);
+  }
+}
+.address-footer {
+  display: block;
+  padding-top: 20px;
+}
+.social-links-footer {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+.social-ellipse {
+  display: inline-block;
+  flex-direction: row;
+  width: 40px;
+  height: 40px;
+  align-items: center;
+  justify-content: center;
+  padding: 8px 8px;
+  fill: var(--footer-header-background-color);
+  gap: 14px;
+  border-radius: 10%;
+}
+.social-icon {
+  text-decoration: none;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #fff;
+  background-color: var(--footer-header-background-color);
+  border-radius: 10%;
+  fill: var(--footer-text-color);
+}
+.icon {
+  display: block;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 40px;
+  height: 40px;
+  padding: 8px;
+  svg {
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+  }
+  use {
+    width: 24px;
+    height: 24px;
+  }
+}
+.footer-policy-terms {
+  display: flex;
+  flex-direction: row;
+  gap: 14px;
+  padding-top: 14px;
+}
+/*--TABLET--*/
+@media screen and (min-width: 768px) {
+  .footer-container {
+    height: 476px;
+  }
+  .footer-section {
+    padding: 80px 32px 20px 32px;
+  }
+  .first-row-tablet {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .first-row {
+    display: flex;
+    justify-content: space-evenly;
+    gap: 142px;
+  }
+  .social-links-footer {
+    padding-top: 0;
+  }
+  .footer-policy-terms {
+    padding: 0;
+  }
+  .last-row {
+    display: flex;
+    align-content: flex-end;
+    justify-content: space-between;
+    padding-top: 152px;
+  }
+}
+
+/*--DESCKTOP--*/
+@media screen and (min-width: 1158px) {
+  .footer-section {
+    padding: 104px 140px 32px 132px;
+  }
+  .first-row {
+    gap: 355px;
+  }
+}
+/*--TABLET--*/
+@media screen and (min-width: 601px) and (max-width: 1024px) {
+  .main-title {
+    color: #141414;
+    font-size: 32px;
+    font-weight: 600;
+    line-height: 40px;
+    padding-bottom: 40px;
+    display: flex;
+    flex-direction: column;
+    height: 88px;
+    width: 448px;
+    gap: 346px;
+  }
+  .watch-shooting-1 {
+    width: 335px;
+    height: 260px;
+    gap: 20px;
+    padding-bottom: 100px;
+    display: flex;
+  }
+  .description-watch {
+    color: #14141480;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 18px;
+    padding-bottom: 40px;
+    width: 572px;
+    height: 72px;
+  }
+  .big-plan {
+    width: 235px;
+    height: 350px;
+  }
+  .watch-shooting-2 {
+    width: 80px;
+    height: 80px;
+  }
+  .big-plan,
+  .section-sale {
+    display: flex;
+    gap: 20px;
+  }
+  .section-sale,
+  .Description,
+  .DETAILS-FEATURESTION {
+    padding-left: 60px;
+    gap: 40px;
+    padding-bottom: 40px;
+  }
+}
+mobileeee .price-now,
+.old-price {
+  display: inline;
+  gap: 8px;
+}
+.price-now {
+  color: #141414;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
+  padding-bottom: 20px;
+}
+.old-price {
+  color: #14141480;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  text-decoration: line-through;
+  padding-bottom: 30px;
+}
+
+.title {
+  color: #141414;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
+  padding-bottom: 10px;
+  text-transform: uppercase;
+}
+.description-watch {
+  color: #14141480;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  padding-bottom: 40px;
+}
+.details {
+  color: #141414;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 24px;
+  text-transform: uppercase;
+}
+.details-description {
+  color: #14141480;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 18px;
+  padding-bottom: 90px;
+}
+.container-section {
+  margin-left: 20px;
+}
+.section-sale,
+.Description,
+.DETAILS-FEATURESTION {
+  gap: 40px;
 }
